operators/manifests/node-labeler/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-labeler
  labels:
    app.kubernetes.io/name: node-labeler
